Fix on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1127,7 +1127,7 @@ footer {
 
 }
 
-// Artwork by Angela He
+// Artwork by Angela He - Not being used
 @import url('https://fonts.googleapis.com/css?family=Mali');
 
 $bg-url: 'https://zephyo.github.io/22Days/code/11/graphics/Background.png';
@@ -1173,34 +1173,6 @@ body {
   background-repeat: repeat-x;
   background-position: center top;
 }
-
-.perspective {
-  perspective: 1800px;
-  perspective-origin:50% 10%;
-}
-
-.preserve-3d {
-  transform-style: preserve-3d;
-}
-
-#avatar {
-  position: absolute;
-  transform-origin: bottom;
-  left: 0;
-  bottom: 0;
-  right: 9vw;
-  margin: auto;
-  width: 770px;
-  height: 890px;
-  z-index: 20;
-  // transition: transform 0.3s ease;
-  div {
-    position: absolute;
-    transform-style: preserve-3d;
-  }
-}
-
-
 
 .body {
   bottom: -40px;
